[package]
name = "nethuns_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
ctrlc = "3.4.5"
etherparse = "0.17.0"
eui48 = "1.1.0"
libc = "0.2.169"
netmap-rs = { path = "netmap_rs" }
#netmap-sys = { path = "../netmap-rs/netmap-sys" }
nix = "0.29.0"
num_cpus = "1.16.0"
mpsc = { path = "mpsc" }
libxdp-sys = { path = "libxdp-sys" }
ringbuf = "0.4.7"
dpdk-sys = { path = "dpdk-sys" }
rand = "0.9.0"
procspawn = "1.0.1"
arrayvec = "0.7.6"
libbpf-sys = "1.5.0"
aya = "0.13.1"
thiserror = "2.0.12"
triomphe = "0.1.14"
flume = "0.11.1"
pcap = "2.3.0"

#libxdp-sys = { path = "libxdp-sys" }

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
debug = true
panic = "abort"
debug-assertions = false



[[example]]
name = "meter"

[[example]]
name = "meter2"

[[example]]
name = "forward"

[[example]]
name = "forward_mt"

[[example]]
name = "pkt-gen"
