[package]
name = "nethuns_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
ctrlc = "3.4.5"
etherparse = "0.17.0"
eui48 = "1.1.0"
libc = "0.2.169"
netmap-rs = { path = "netmap_rs", optional = true }
#netmap-sys = { path = "../netmap-rs/netmap-sys" }
nix = "0.29.0"
num_cpus = "1.16.0"
mpsc = { path = "mpsc" }
libxdp-sys = { path = "libxdp-sys", optional = true }
ringbuf = "0.4.7"
dpdk-sys = { path = "dpdk-sys", optional = true }
rand = "0.9.0"
procspawn = "1.0.1"
arrayvec = "0.7.6"
libbpf-sys = { version = "1.5.0", optional = true }
aya = { version = "0.13.1", optional = true }
thiserror = "2.0.12"
triomphe = "0.1.14"
flume = "0.11.1"
pcap = { version = "2.3.0", optional = true }

[features]
default = ["pcap"]
netmap = ["dep:netmap-rs"]
dpdk = ["dep:dpdk-sys"]
af_xdp = ["dep:libxdp-sys", "dep:aya", "dep:libbpf-sys"]
pcap = ["dep:pcap"]

#libxdp-sys = { path = "libxdp-sys" }

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
debug = true
panic = "abort"
debug-assertions = false



[[example]]
name = "meter"

[[example]]
name = "meter2"

[[example]]
name = "forward"

[[example]]
name = "forward_mt"

[[example]]
name = "pkt-gen"
