[package]
name = "nethuns_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
ctrlc = "3.4.5"
crossbeam-queue = "0.3.11"
etherparse = "0.17.0"
eui48 = "1.1.0"
libc = "0.2.169"
netmap-rs = { path = "netmap_rs", optional = true }
#netmap-sys = { path = "../netmap-rs/netmap-sys" }
nix = "0.29.0"
num_cpus = "1.16.0"
mpsc = { path = "mpsc", default-features = false }
libxdp-sys = { path = "libxdp-sys", optional = true }
ringbuf = "0.4.7"
dpdk-sys = { path = "dpdk-sys", optional = true }
rand = "0.9.0"
procspawn = "1.0.1"
arrayvec = "0.7.6"
libbpf-sys = { version = "1.5.0", optional = true }
aya = { version = "0.13.1", optional = true }
thiserror = "2.0.12"
triomphe = "0.1.14"
flume = "0.11.1"
pcap = { version = "2.3.0", optional = true }

#libxdp-sys = { path = "libxdp-sys" }

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
debug = true
panic = "abort"
codegen-units = 1
opt-level = 3
debug-assertions = false

[features]
default = ["pcap"]
af-xdp = ["dep:aya", "dep:libbpf-sys", "dep:libxdp-sys"]
dpdk = ["dep:dpdk-sys"]
netmap = ["dep:netmap-rs"]
pcap = ["dep:pcap"]
simd = ["mpsc/simd"]



[[example]]
name = "meter"

[[example]]
name = "meter2"

[[example]]
name = "forward"

[[example]]
name = "forward_mt"

[[example]]
name = "pkt-gen"

[[example]]
name = "bench_queue"
