[package]
name = "mpsc"
version = "0.1.0"
edition = "2024"

[features]
# SIMD feature using std::simd (requires nightly Rust)
# Disabled by default for stable compatibility
simd = []

[dependencies]
#arrayvec = "0.7.6"
arrayvec = {path = "arrayvec"}
crossbeam-utils = "0.8.21"
kanal = "0.1.1"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
ringbuf = "0.4.8"
#ringbuf = { path = "ringbuf" }
smallvec = "1.14.0"
static_assertions = "1.1.0"
thread_local = "1.1.9"
triomphe = "0.1.14"


[profile.release]
panic = "abort"
lto = "fat"