[package]
name = "netmap-sys"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.3.10"
libc = "0.2.168"
uapi = "0.2.13"

[build-dependencies]
bindgen = "0.71.1"
cfg-if = "1.0.0"
regex = "1.11.1"

[dev-dependencies]
